# debconf-translation-manager

./: README.md  messages.mo  po4a.cfg  pyproject.toml  setup.py
.tx/: config
debconf_translation_manager/: __init__.py  __main__.py  app.py  window.py
debconf_translation_manager/data/: org.debian.DebconfTranslationManager.desktop
debconf_translation_manager/locale/sv/LC_MESSAGES/: debconf-translation-manager.mo
debconf_translation_manager/services/: __init__.py  apt_service.py  ddtss.py  l10n_debian.py  notifier.py  settings.py  smtp_sender.py  submission_log.py  submission_queue.py  template_parser.py
debconf_translation_manager/views/: __init__.py  bts_workflow.py  coordination.py  ddtss_workflow.py  diff_view.py  package_detail_page.py  package_list_page.py  package_list_view.py  po_editor.py  po_editor_page.py  po_editor_view.py  preferences.py  queue_view.py  review_board.py  settings.py  settings_view.py  statistics.py  stats_page.py  stats_view.py  submission_queue.py  submit_dialog.py  template_browser.py  translation_status.py
debconf_translation_manager/widgets/: __init__.py  diff_widget.py  filter_bar.py  preview_dialog.py  status_badge.py
debian/: changelog  control  copyright  debconf-translation-manager.install  debconf-translation-manager.manpages
man/: debconf-translation-manager.1
man/sv/: debconf-translation-manager.1
po/: POTFILES.in  debconf-translation-manager-man.pot  debconf-translation-manager.pot  sv.mo  sv.po
po/man/: sv.po
